Fixed header spacing on smaller devices

--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -106,7 +106,6 @@ body {
 	position: relative;
 	width: auto;
 	height: 100%;
-	min-height: @header-height;
 	max-height: @header-height;
 	&:after {
 		content: '';
